fix spacing

--- a/client/style.css
+++ b/client/style.css
@@ -68,6 +68,7 @@ img {
 
 .frame {
 	width: 50%;
+	height: 100%;
 	border: 0;
 	margin: 8px;
 	padding: 20px;
